--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">Foodima</div>
             <ul>
-                <li><a href="#">Shop</a></li>
+                <li><a href="https://foodima.org/">Shop</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#" class="active">Recipes</a></li>
                 <li><a href="#">Hotline</a></li>
